#:schema https://json.schemastore.org/pyproject.json
#:schmea https://json.schemastore.org/ruff.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/cursus/dnp3/assets/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cursus"]

[project]
name = "cursus"
version = "0.2.0"
description = "The server for ICS protocols"
requires-python = ">=3.14"
dependencies = [
    "pymodbus>=3.12.0",
    "python-snap7>=1.3,<3.0",
    "decima",
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-include-markdown-plugin>=7.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
managed = true

[tool.uv.sources]
decima = { git = "https://github.com/cvasilatos/decima.git" }

[tool.ty.environment]
python = "./.venv/bin/python"
python-version = "3.14"
root = ["src"]
